--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,10 @@ footer {
         font-size: 15px;
     }
 
+    body {
+        justify-content: flex-start;
+    }
+
     .logo-container {
         padding: 5px;
     }
