--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
     font-family: 'MyWebFont', sans-serif;
     background-color: #fff9e4;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     height: 90vh;
     flex-direction: column;
